# .NCC_to_.CNC

./: .gitignore  LICENSE  PKG-INFO  README.md  SOURCES.txt  bad_arc_radius.NCC  entry_points.txt  nodeids  pyproject.toml  requires.txt  test_emitter.py  test_geometry.py  test_loader_lexer.py  test_modal_parser.py
examples/: 4HDNOAA.NCC  bad_no_modal_g.NCC  output.cnc  quantized_arc_edge.NCC
ncc_converter/: cli.py  emitter.py  geometry.py  lexer.py  loader.py  modal.py  operations.py  parser.py  pipeline.py  top_level.txt
tests/: test_pipeline_cli.py
