[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncc-converter"
version = "0.1.0"
description = "Burny .NCC G-code normaliser and converter"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ncc = "ncc_converter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.setuptools]
packages = ["ncc_converter"]

